invisible nav menu fixed

--- a/client/src/sass/components/_header.scss
+++ b/client/src/sass/components/_header.scss
@@ -132,7 +132,7 @@
     position: absolute;
     width: 100%;
     top: 100%;
-    // visibility: hidden;
+    visibility: hidden;
     opacity: 0;
     transition: all .5s;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
@@ -141,15 +141,15 @@
 
     &--active {
       // visibility: hidden;
-      opacity: 1;
+      // opacity: 1;
    
-      @include respond(phone) {
+      // @include respond(phone) {
         // visibility: visible;
         opacity: 1;
         background: rgba(255, 255, 255, 1);
         transition: all 1s;
         // transition: 2s;
-      }
+      // }
     }
   }
 
